[package]
name = "masque-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "masque-server"
path = "src/main.rs"

[dependencies]
tokio-quiche = "0.16"
tokio = { version = "1", features = ["net", "sync", "time", "rt-multi-thread", "macros"] }
futures = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
